@@ -236,23 +236,21 @@ with the property "cluster=2" is used. This is the same when you will use the
 How to enable jobs to connect to the frontales from the nodes using oarsh?
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 First you have to register the frontales into the database using
-oarnodesetting_ with the "frontale" type and assigned the desired cpus into
-the cpuset field, for example::
+oarnodesetting_ with the "frontale" (for example) type and assigned the desired
+cpus into the cpuset field; for example::
 
     oarnodesetting -a -h frontal1 -p type=frontale -p cpuset=0
     oarnodesetting -a -h frontal1 -p type=frontale -p cpuset=1
     oarnodesetting -a -h frontal2 -p type=frontale -p cpuset=0
     ...
 
-(resource types **must** be "frontale")
-
 Thus you will be able to see resources identifier of these resources with
 oarnodes_; try to type::
 
     oarnodes --sql "type='frontale'"
     
-Then put these "resource_id" into the *oar.conf* file on the OAR server into
-the tag SCHEDULER_RESOURCES_ALWAYS_ASSIGNED_ separated with spaces.
+Then put this type name (here "frontale") into the *oar.conf* file on the OAR
+server into the tag SCHEDULER_RESOURCES_ALWAYS_ASSIGNED_TYPE_.
 
 Notes:
  - if one of these resources become "Suspected" then the scheduling will
