@@ -66,6 +66,8 @@ foreach my $i (@events_to_check){
     if (($i->{type} eq "PING_CHECKER_NODE_SUSPECTED") ||
         ($i->{type} eq "CPUSET_ERROR") ||
         ($i->{type} eq "CPUSET_CLEAN_ERROR") ||
+        ($i->{type} eq "SUSPEND_ERROR") ||
+        ($i->{type} eq "RESUME_ERROR") ||
         ($i->{type} eq "PROLOGUE_ERROR") ||
         ($i->{type} eq "EPILOGUE_ERROR") ||
         ($i->{type} eq "CANNOT_WRITE_NODE_FILE") ||
@@ -83,6 +85,12 @@ foreach my $i (@events_to_check){
         ){
             @hosts = iolib::get_hostname_event($base,$i->{event_id});
             $finaud_tag = "YES";
+        }elsif (($i->{type} eq "CPUSET_ERROR") ||
+                ($i->{type} eq "CPUSET_CLEAN_ERROR") ||
+                ($i->{type} eq "SUSPEND_ERROR") ||
+                ($i->{type} eq "RESUME_ERROR")
+               ){
+            @hosts = iolib::get_hostname_event($base,$i->{event_id});
         }else{
             my $job = iolib::get_job($base,$i->{job_id});
             @hosts = iolib::get_job_host_log($base,$job->{assigned_moldable_job});
