@@ -67,7 +67,8 @@ if (!defined($sched_available_suspended_resource_type_tmp)){
 }
 
 # Look at resources that we must add for each job
-my @Resources_to_always_add = split(" ",get_conf("SCHEDULER_RESOURCES_ALWAYS_ASSIGNED"));
+my $Resources_to_always_add_type = get_conf("SCHEDULER_RESOURCES_ALWAYS_ASSIGNED_TYPE");
+my @Resources_to_always_add = ();
 
 my $current_time ;
 
@@ -87,16 +88,16 @@ my $base_ro = iolib::connect_ro();
 oar_debug("[oar_sched_gantt_with_timesharing_and_fairsharing] Begining of Gantt scheduler on queue $queue at time $current_time\n");
 
 # First check states of resources that we must add for each job
-my $tmp_result_state_resources = iolib::get_specific_resource_states($base,\@Resources_to_always_add);
-if ($#{@{$tmp_result_state_resources->{"Suspected"}}} >= 0){
-    oar_warn("[oar_sched_gantt_with_timesharing] There are resources that are specified in oar.conf (SCHEDULER_RESOURCES_ALWAYS_ASSIGNED) which are Suspected. So I cannot schedule any job now.\n");
-    exit(1);
-}else{
-    if (defined($tmp_result_state_resources->{"Alive"})){
-        @Resources_to_always_add = @{$tmp_result_state_resources->{"Alive"}};
-        oar_debug("[oar_sched_gantt_with_timesharing] Assign these resources for each jobs: @Resources_to_always_add\n");
+if (defined($Resources_to_always_add_type)){
+    my $tmp_result_state_resources = iolib::get_specific_resource_states($base,$Resources_to_always_add_type);
+    if ($#{@{$tmp_result_state_resources->{"Suspected"}}} >= 0){
+        oar_warn("[oar_sched_gantt_with_timesharing] There are resources that are specified in oar.conf (SCHEDULER_RESOURCES_ALWAYS_ASSIGNED_TYPE) which are Suspected. So I cannot schedule any job now.\n");
+        exit(1);
     }else{
-        @Resources_to_always_add = ();
+        if (defined($tmp_result_state_resources->{"Alive"})){
+            @Resources_to_always_add = @{$tmp_result_state_resources->{"Alive"}};
+            oar_debug("[oar_sched_gantt_with_timesharing] Assign these resources for each jobs: @Resources_to_always_add\n");
+        }
     }
 }
 
