@@ -141,10 +141,10 @@ SCHEDULER_GANTT_HOLE_MINIMUM_TIME="300"
 # system(SQL ORDER syntax)
 SCHEDULER_RESOURCE_ORDER="suspended_jobs ASC, switch ASC, network_address DESC, resource_id ASC"
 
-# You can specify resources (resource_id) that will be always assigned for each job
+# You can specify a type of resources that will be always assigned for each job
 # (for exemple: enable all jobs to be able to log on the cluster frontales)
 # For more information, see the FAQ
-#SCHEDULER_RESOURCES_ALWAYS_ASSIGNED="42 54 12 34"
+#SCHEDULER_RESOURCES_ALWAYS_ASSIGNED_TYPE="frontale"
 
 # This says to the scheduler to treate resources of these types, where there is
 # a suspended job, like free ones. So some other jobs can be scheduled on these
