@@ -8,6 +8,7 @@ upstream development version:
   - add sudo configuration to deal with bash. Now oarsub and oarsh have the same behaviour as ssh
     (the bash configuration files are loaded correctly)
   - bug fix in drawgantt (loose jobs after submission of a moldable one)
+  - add SCHEDULER_RESOURCES_ALWAYS_ASSIGNED_TYPE into oar.conf. Thus admin can add some resources for each jobs (like frontale node)
 
 version 2.0.2:
 --------------
